# chess

./: .gitignore  Cargo.toml
render/: index.html
src/: magic.rs  main.rs  render.rs
src/data/: board
src/web/: index.html  script.js
