[package]
name = "chess"
version = "0.1.0"
authors = ["Peter Klimenko <peterklimk@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
rocket = "0.4.4"

[dependencies.rocket_contrib]
version = "0.4.4"